fix: alignment of icons

--- a/app/page.css
+++ b/app/page.css
@@ -19,6 +19,7 @@ nav {
 
 nav > div {
     display: flex;
+    flex-direction: column;
     align-items: center;
 }
 
